--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
-  "name": "smart-cards",
-  "private": true,
+  "name": "intellect-cards",
+  "homepage": "https://yurydash.github.io/intellect-cards/",
+  "private": false,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "predeploy": "pnpm run build",
+    "deploy": "gh-pages -d dist",
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
@@ -59,6 +62,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
     "eslint-plugin-storybook": "^0.6.13",
+    "gh-pages": "^6.1.1",
     "sass": "^1.64.1",
     "storybook": "7.2.1",
     "storybook-addon-react-router-v6": "^2.0.7",
